修复CSS和JS文件引用路径，解决GitHub Pages样式缺失问题

--- a/review-assistant.html
+++ b/review-assistant.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>智能复盘助手</title>
-    <link rel="stylesheet" href="review-assistant.css">
+    <link rel="stylesheet" href="/Intelligent-Retrospection-Assistant/review-assistant.css">
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </head>
 <body>
@@ -311,6 +311,6 @@
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-    <script src="review-assistant.js"></script>
+    <script src="/Intelligent-Retrospection-Assistant/review-assistant.js"></script>
 </body>
 </html>
